--- a/views/audition.ejs
+++ b/views/audition.ejs
@@ -22,9 +22,11 @@
                 <h1>logo</h1>
             </div>
             <div class="icon">
-                <div class="user">
-                    <img src="/assest/OLIVE/usergold.png" alt="" srcset="">
-                </div>
+                <a href="/profile">
+                    <div class="user">
+                        <img src="/assest/OLIVE/usergold.png" alt="" srcset="">
+                    </div>
+                </a>
                 <a href="/dashboard">
                     <div class="home">
                         <img src="/assest/OLIVE/goldHomeIcon.png" alt="" srcset="">
@@ -75,7 +77,7 @@
                                     <% } %>
                                         <% if (audition.auditionPattern===1 ) { %>
                                             <div id="recordBtn">
-                                                <a target="restream">
+                                                <a target="restream" class="saveuser">
                                                     <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
                                                     <h6>Record a video</h6>
                                                 </a>
@@ -102,14 +104,17 @@
                 <button class="btn">Update Your Profile</button>
                 </form>
             </section>
+            <section class="last">
+                <div></div>
+            </section>
         </div>
-        <!-- <div id="forlivevideo"
+        <div id="forlivevideo"
             style="min-height: 730px; display: flex; flex-direction: column; transform: translateY(730px);transition: transform .5s ease .5s;  align-items: center; gap: 10px; padding: .55em; background-color: black;">
             <h4 class="content_header">Big Brother Naija 2022</h4>
             <iframe allowfullscreen height="730px" allow="camera; microphone;" width="100%" src="" frameborder="0"
                 name="restream">
             </iframe>
-        </div> -->
+        </div>
     </div>
     <script>
 
@@ -121,6 +126,33 @@
             forlivevideo.style.transform = 'translateY(-730px)'
             document.querySelector("iframe").src = "https://studio.restream.io/guest/bDBaNllXa7srZaCHW01LjKxavz4ynEU"
         })
+
+
+        window.addEventListener("DOMContentLoaded", (e) => {
+            alert()
+            const d = {
+                auditionId: '<%=audition._id%>',
+                user: '<%=user._id%>'
+            }
+            fetch("/digitalauditionplatform", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(d)
+            })
+                .then(res => res.json())
+                .then(data => {
+                    console.log(data);
+                    if (data.success) {
+                        // window.location.href = "/dashboard";
+                        console.log("joined")
+                    }
+                })
+
+        })
+
+
 
     </script>
 </body>
