--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -32,7 +32,7 @@
         </div>
         <!--  -->
     </section>
-    <section class="content">
+    <section class="content" style="background-color: #fff;">
         <h4 class="content_header">My Dashboard</h4>
         <div class="boxs">
             <a href="/digitalauditionplatform">
@@ -54,6 +54,13 @@
             <div class="box">
                 <img src="/assest/OLIVE/icon/Vector-2.png">
                 <h5>Creative Content Showcase</h5>
+            </div>
+            <div class="box">
+                <a href="/auditions">
+                    <img src="/assest/OLIVE/recorder.png">
+                    <h5>My Auditions</h5>
+
+                </a>
             </div>
         </div>
         <!-- <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
@@ -85,5 +92,8 @@
             <p>*By continuing you accept the Promoflo network and OLIVE Terms and Privacy Policy.</p>
             <p>or <span>LOG IN</span> with </p>
         </div> -->
+    </section>
+    <section class="last">
+        <div></div>
     </section>
     <%- include("./partials/footer.ejs") %>
