--- a/views/error.ejs
+++ b/views/error.ejs
@@ -25,10 +25,8 @@
 <body class="five-zero-zero bg-orange">
     <div class="five-zero-zero-container">
         <div class="error-code">500</div>
-        <div class="error-message">Internal Server Error</div>
-        <div class="button-place">
-            <a href="/dashboard" class="btn btn-default btn-lg waves-effect">GO TO HOMEPAGE</a>
-        </div>
+        <div class="error-message">Link Error</div>
+
     </div>
 
     <!-- Jquery Core Js -->
