--- a/views/provider/partials/footer.ejs
+++ b/views/provider/partials/footer.ejs
@@ -1,3 +1,33 @@
+<!-- Jquery Core Js -->
+<script src="/assets/plugins/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core Js -->
+<script src="/assets/plugins/bootstrap/js/bootstrap.js"></script>
+
+<!-- Select Plugin Js -->
+<script src="/assets/plugins/bootstrap-select/js/bootstrap-select.js"></script>
+
+<!-- Slimscroll Plugin Js -->
+<script src="/assets/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
+
+<!-- Waves Effect Plugin Js -->
+<script src="/assets/plugins/node-waves/waves.js"></script>
+
+<!-- Jquery CountTo Plugin Js -->
+<script src="/assets/plugins/jquery-countto/jquery.countTo.js"></script>
+
+<!-- Sparkline Chart Plugin Js -->
+<script src="/assets/plugins/jquery-sparkline/jquery.sparkline.js"></script>
+
+<!-- Custom Js -->
+<script src="/assets/js/admin.js"></script>
+<script src="/assets/js/pages/widgets/infobox/infobox-2.js"></script>
+
+<!-- Demo Js -->
+<script src="/assets/js/demo.js"></script>
+
+
+
 <script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script>
 
 <!-- Jquery Core Js -->
