--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -1,206 +1,301 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include ("./partials/header.ejs") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Olive</title>
-    <link rel="stylesheet" href="styles/auth.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.min.css" />
-    <!-- JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,900&display=swap" rel="stylesheet">
-</head>
-
-<body>
-
-    <div class="container">
-        <header>
-            <div class="logo">
-                <h1>logo</h1>
+    <section class="largeImg">
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/woman.png" />
+                </div>
+                <div class="swiper-slide">
+                    <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
+                </div>
             </div>
-            <div class="icon">
-                <div class="user">
-                    <img src="/assest/OLIVE/Group-1.png" alt="" srcset="">
-                </div>
-                <a href="/">
-                    <div class="home">
-                        <img src="/assest/OLIVE/Group.png" alt="" srcset="">
-                    </div>
-                </a>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+
+            <div class="swiper-button-prev">
+                <img class="carousel-l" src="/assest/OLIVE/Group 2.png" />
             </div>
-        </header>
-        <section class="largeImg">
-
-
-            <div class="swiper">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <img src="/assest/OLIVE/woman.png" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
-                    </div>
-
-                </div>
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
-
-                <!-- If we need navigation buttons -->
-
-                <div class="swiper-button-prev">
-                    <img class="carousel-l" src="/assest/OLIVE/Group 2.png" />
-                </div>
-                <div class="swiper-button-next">
-                    <img class="carousel" src="/assest/OLIVE/Group 2.png" />
-                </div>
-
-                <!-- If we need scrollbar -->
-                <div class="swiper-scrollbar"></div>
-
-                <!-- 
-                <img src="/assest/OLIVE/guy.png" />
-                <img src="/assest/OLIVE/woman.png" />  -->
+            <div class="swiper-button-next">
+                <img class="carousel" src="/assest/OLIVE/Group 2.png" />
             </div>
-            <!--  -->
 
-        </section>
-        <section class="content">
-            <h4 class="">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
-            <p class="content_text">
-                <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
-                enthusiasts
-                seeking talent discovery, training, incubation, content production, publicity, audience engagement and
-                market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
-            </p>
-            <div class="youtube">
-                <img src="/assest/OLIVE/ladyYoutube.png" alt="" srcset="">
-                <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+
+            <!-- 
+            <img src="/assest/OLIVE/guy.png" />
+            <img src="/assest/OLIVE/woman.png" />  -->
+        </div>
+        <!--  -->
+    </section>
+    <section class="content link_register">
+        <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
+        <p class="content_text">
+            <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
+            enthusiasts
+            seeking talent discovery, training, incubation, content production, publicity, audience engagement and
+            market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
+        </p>
+        <div class="youtube">
+            <img src="/assest/OLIVE/ladyYoutube.png" alt="" srcset="">
+            <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
+        </div>
+
+        <b class="content_header register_link_header">JOIN OLIVE FOR FREE </b>
+        <form class="register_link">
+            <div class="number">
+                <label for="number">Please enter your phone number</label>
+                <!-- <input type="number" name="username" required> -->
+                <input id="phone" name="username" type="tel">
+
+                <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
-            <div class="join">
-
-                <div class="phoneInput">
-                    <h4 class="form content_header">JOIN FREE OR <a href='/login'>SIGN IN</a>
-                    </h4>
-                    <img src="/assest/OLIVE/Line 2.png" alt="">
-                    <form id="form" class="numberform">
-                        <div class="flex-form">
-                            <!-- <select>
-                                <option class="ng"></option>
-
-                            </select> -->
-                            <!-- <input type="text" name="code" id="code" readonly value="+234"> -->
-                            <label id="forphone" for="phone">
-                                <div style="display: flex; align-items: center;">
-                                    <img src="/assest/OLIVE/emojione_flag-for-nigeria.png" alt="" srcset="">
-                                    <img src="/assest/OLIVE/arrowdown.png" />
-                                </div>
-                            </label>
-
-
-                            <input type="number" name="username" id="username" class="input" placeholder="0815 243 5263"
-                                autocomplete="of">
-
-                        </div>
-
-                        <!-- confirm password -->
-
-                        <input type="password" class="input p"
-                            style="font-size: smaller; font-weight: lighter; text-transform: uppercase;" name="password"
-                            id="password" placeholder="create a password">
-                        <img src="/assest/OLIVE/Line 2.png" alt="">
-
-
-                </div>
-                <button class="btn">SIGN IN</button>
-                <p>*By continuing you accept the Promoflo network and OLIVE Terms and Privacy Policy.</p>
-                <p>or <span>LOG IN</span> with </p>
-                </form>
+            <div class="number">
+                <label for="email">Enter your email address </label>
+                <input type="email" name="email" required>
+                <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
-            <div class="otp_content">
-                <form id="otp">
-                    <h4 class="otp ">Verify your Phone number</h4>
-                    <h5>Enter your OTP code here</h5>
-                    <br>
-                    <br>
-
-                    <div class="otp">
-                        <input type="text" name="one" id="one" maxlength="1">
-                        <input type="text" name="two" id="two" maxlength="1">
-                        <input type="text" name="three" id="three" maxlength="1">
-                        <input type="text" name="four" id="four" maxlength="1">
-                        <input type="text" name="five" id="five" maxlength="1">
-                    </div>
-                    <br>
-                    <br>
-                    <button type="submit" class="btn">SIGN IN</button>
-
-                </form>
-                <h6 class="resend">Resend</h6>
+            <div class="number">
+                <label for="name">Enter your full name</label>
+                <input type="text" name="name">
+                <img src="/assest/OLIVE/Line 2.png" alt="" required>
             </div>
-            <footer>
-                <div class="facebook">
-                    <img src="/assest/OLIVE/Ellipse 2.png" />
-                    <img class="socialicons" src="/assest/OLIVE/brandico_facebook.png" />
-                </div>
-                <div class="google">
-                    <img src="/assest/OLIVE/Ellipse 2.png" />
-                    <img class="socialicons" src="/assest/OLIVE/flat-color-icons_google.png" />
-                </div>
-                <div class="mail">
-                    <img src="/assest/OLIVE/Ellipse 2.png" />
-                    <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
-                </div>
+            <div class="number">
+                <label for="password">Password</label>
+                <input type="password" id="password" required name="password">
+                <img src="/assest/OLIVE/Line 2.png" alt="">
+            </div>
+            <div class="number">
+                <label for="confirm_password">Confirm password</label>
+                <input type="password" name="" id="confirm_password" required>
+                <img src="/assest/OLIVE/Line 2.png" alt="">
+            </div>
+            <!-- <div class="number">
+                <label for="p2">Upload Picture</label>
+                <input type="file" name="logo" id="p2">
+                <img src="/assest/OLIVE/Line 2.png" alt="">
+            </div> -->
+            <button class="btn" id="submitBtn" type="submit">REGISTER</button>
+        </form>
 
-            </footer>
-        </section>
-        <section class="last">
-            <div></div>
-        </section>
 
-        <div class="bottom"></div>
-    </div>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+        <div class=" otp_content">
+            <form id="otp">
+                <h4 class="otp ">Verify your Phone number or Email</h4>
+                <h5>Enter your OTP code here</h5>
+                <br>
+                <br>
+
+                <div class="otp">
+                    <input type="text" name="one" id="one" maxlength="1">
+                    <input type="text" name="two" id="two" maxlength="1">
+                    <input type="text" name="three" id="three" maxlength="1">
+                    <input type="text" name="four" id="four" maxlength="1">
+                    <input type="text" name="five" id="five" maxlength="1">
+                </div>
+                <br>
+                <br>
+                <button type="submit" class="btn">SIGN IN</button>
+
+            </form>
+            <h6 class="resend">Resend</h6>
+            <br>
+            <h6 class="resend">
+                <a href="/login" style="color: #801315;">Already a Member? Login </a>
+                <br>
+                <br>
+
+                <p style="color: #801315;">or <span>LOG IN</span> with </p>
+            </h6>
+        </div>
+
+
+        <footer>
+            <div class="facebook">
+                <img src="/assest/OLIVE/Ellipse 2.png" />
+                <img class="socialicons" src="/assest/OLIVE/brandico_facebook.png" />
+            </div>
+            <div class="google">
+                <img src="/assest/OLIVE/Ellipse 2.png" />
+                <img class="socialicons" src="/assest/OLIVE/flat-color-icons_google.png" />
+            </div>
+            <div class="mail">
+                <img src="/assest/OLIVE/Ellipse 2.png" />
+                <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
+            </div>
+
+        </footer>
+
+
+    </section>
+
+
+
+
     <script>
-        const swiper = new Swiper('.swiper', {
-            // Optional parameters
-            autoplay: {
-                delay: 2500,
-                disableOnInteraction: false,
-            },
-            loop: true,
 
-            // If we need pagination
-            pagination: {
-                el: '.swiper-pagination',
-            },
-
-            // Navigation arrows
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-
-            // And if we need scrollbar
-            // scrollbar: {
-            //     el: '.swiper-scrollbar',
-            // },
+        var input = document.querySelector("#phone");
+        window.intlTelInput(input, {
+            initialCountry: "NG",
+            autoHideDialCode: false,
+            utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js",
         });
+
+        input.addEventListener("open:countrydropdown", function (e) {
+            e.target.setAttribute("placeholder", "Select Country");
+            e.target.style.width = "40px !important";
+        });
+
+
+        // form validation
+        // function validateForm() {
+        //     var x = document.forms["myForm"]["fname"].value;
+        //     if (x == "") {
+        //         alert("Name must be filled out");
+        //         return false;
+        //     }
+        // }
+        // post fecth / create
+        const formed = document.querySelector(".register_link");
+        const submitBtn = document.querySelector("#submitBtn");
+        const password = document.querySelector("#password");
+        const confirm = document.querySelector("#confirm_password");
+        // const continueBtn = document.querySelector(".continue");
+
+
+        formed.addEventListener("submit", (e) => {
+            e.preventDefault();
+
+            if (password.value !== confirm.value) {
+                alert("password does not match");
+                submitBtn.disabled = false;
+                submitBtn.innerHTML = "REGISTER";
+                return false;
+
+            }
+
+            // password validation
+            if (password.value.length < 8) {
+                alert("password must be at least 8 characters");
+                submitBtn.disabled = false;
+                submitBtn.innerHTML = "REGISTER";
+                return false;
+            }
+
+
+
+
+            // validate number with regex
+            if (!input.value.match(/^[0-9]{11}$/)) {
+                alert("number must be 11 digits");
+                submitBtn.disabled = false;
+                submitBtn.innerHTML = "REGISTER";
+                return false;
+            }
+
+            // validate email
+            if (formed.email.value.indexOf("@") == -1) {
+                alert("invalid email");
+                submitBtn.disabled = false;
+                submitBtn.innerHTML = "REGISTER";
+                return false;
+            }
+
+            submitBtn.innerHTML = "Registering...";
+            submitBtn.disabled = true;
+
+            // location query
+
+
+            const payload = {
+                "username": input.value,
+                "email": e.target.email.value,
+                "password": e.target.password.value,
+                "name": e.target.name.value,
+
+            };
+            console.log(payload);
+            fetch('/', {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(payload)
+            })
+                .then(res => res.json())
+                .then(data => {
+                    if (data.status === "true") {
+                        const otp_content = document.querySelector(".otp_content")
+                        otp_content.style.display = "flex";
+                        formed.style.display = "none"
+                    } else {
+                        alert(data.error)
+                    }
+
+
+                })
+        })
+        const otp = document.querySelector("#otp");
+
+        otp.addEventListener("submit", (e) => {
+            e.preventDefault()
+
+            const inputOtp = e.target.one.value.concat(e.target.two.value, e.target.three.value, e.target.four.value, e.target.five.value);
+            console.log(inputOtp)
+
+
+            fetch('/otp', {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    otp: inputOtp
+                })
+            }).then(res => res.json())
+                .then(data => {
+                    if (data.status === "success") {
+                        window.location.href = "/login";
+                    }
+                    console.log(data)
+
+                })
+
+        })
+
+
+            // fetch("/auditionlink", {
+            //     method: "POST",
+            //     headers: {
+            //         "Content-Type": "application/json"
+            //     },
+            //     body: JSON.stringify(payload)
+            // })
+            //     .then(res => res.json())
+            //     .then(data => {
+            //         submitBtn.innerHTML = "Sucess";
+            //         // form.style.display = "none";
+            //         console.log(data);
+            //         if (data.pay) {
+            //             alert("You have been registered for the audition");
+            //             // window.location.href = ``;
+            //             window.location.assign(`/auditionlink/payment/?auditionId=${auditionId}&user=${data.pay.user}`);
+            //         } else {
+
+            //             // continueBtn.style.display = "block";
+            //             // continueBtn.innerHTML += " with audition";
+            //             window.location.assign(`/digitalauditionplatform/${auditionId}`)
+            //         }
+            //     })
+            //     .catch(err => console.log(err));
+
+
+        // bouncing text
+
+
+
+
     </script>
-    <script src="/js/app.js"></script>
 
-</body>
-
-</html>
+    <%- include ("./partials/footer.ejs") %>
