--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,14 +27,8 @@
                 <h1>logo</h1>
             </div>
             <div class="icon">
-                <div class="user">
-                    <img src="/assest/OLIVE/Group-1.png" alt="" srcset="">
-                </div>
-                <a href="/">
-                    <div class="home">
-                        <img src="/assest/OLIVE/Group.png" alt="" srcset="">
-                    </div>
-                </a>
+
+
             </div>
         </header>
         <section class="largeImg">
@@ -74,7 +68,7 @@
             <!--  -->
 
         </section>
-        <section class="content">
+        <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
                 <strong>Olive platform</strong> is a triumvirate and youth-centric digital ecosystem built for creative
@@ -86,47 +80,57 @@
                 <img src="/assest/OLIVE/ladyYoutube.png" alt="" srcset="">
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
             </div>
-            <div class="join">
 
-                <div class="phoneInput">
-                    <h4 class="form content_header"> SIGN IN <a href='/'> OR JOIN FREE</a>
-                        <hr>
-                    </h4>
-                    <form id="form" class="numberform">
-                        <div class="flex-form">
-                            <!-- <select>
-                                <option class="ng"></option>
+            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO OLIVE </b>
+            <form style="margin-bottom: 20px;" class="register_link" id="form">
+                <div class="number">
+                    <label for="number">Please enter your phone number</label>
+                    <!-- <input type="number" name="username" required> -->
+                    <input id="phone" name="username" type="tel">
 
-                            </select> -->
-                            <!-- <input type="text" name="code" id="code" readonly value="+234"> -->
-                            <label id="forphone" for="phone">
-                                <div style="display: flex; align-items: center;">
-                                    <img src="/assest/OLIVE/emojione_flag-for-nigeria.png" alt="" srcset="">
-                                    <img src="/assest/OLIVE/arrowdown.png" />
-                                </div>
-                            </label>
-
-
-                            <input type="number" name="username" id="username" class="input"
-                                placeholder="0815 243 5263">
-
-                        </div>
-                        <hr>
-                        <input type="password" class="input p"
-                            style="font-size: smaller; font-weight: lighter; text-transform: uppercase;" name="password"
-                            id="password" placeholder="create a password">
-                        <hr>
-                        <button class="btn">SIGN IN</button>
-                    </form>
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
                 </div>
-                <p>*By continuing you accept the Promoflo network and OLIVE Terms and Privacy Policy.</p>
-                <p>or <span>LOG IN</span> with </p>
-            </div>
+                <!-- <div class="number">
+                    <label for="email">Enter your email address </label>
+                    <input type="email" name="email" required>
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
+                </div>
+                <div class="number">
+                    <label for="name">Enter your full name</label>
+                    <input type="text" name="name">
+                    <img src="/assest/OLIVE/Line 2.png" alt="" required>
+                </div> -->
+                <div class="number">
+                    <label for="password">Password</label>
+                    <div style="display: flex; gap: 10px;margin-left: 5px;">
+                        <img src="/assest/OLIVE/lock.png" alt="" srcset="">
+                        <input type="password" id="password" required name="password">
+                    </div>
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
+                </div>
+                <!-- <div class="number">
+                    <label for="confirm_password">Confirm password</label>
+                    <input type="password" name="" id="confirm_password" required>
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
+                </div> -->
+                <!-- <div class="number">
+                    <label for="p2">Upload Picture</label>
+                    <input type="file" name="logo" id="p2">
+                    <img src="/assest/OLIVE/Line 2.png" alt="">
+                </div> -->
+                <button class="btn" id="submitBtn" type="submit">SIGN IN</button>
+            </form>
+
+            <a style="color: #801315;" class="register" href="/">Register on OLIVE NOW</a>
+            <p>or <span>LOG IN</span> with </p>
+
             <!-- <div class="otp_content">
                 <form id="otp">
-                    <h4 class="otp content_header">Verify your Phone number</h4>
+                    <h4 class="otp ">Verify your Phone number</h4>
                     <h5>Enter your OTP code here</h5>
                     <br>
+                    <br>
+    
                     <div class="otp">
                         <input type="text" name="one" id="one" maxlength="1">
                         <input type="text" name="two" id="two" maxlength="1">
@@ -134,13 +138,15 @@
                         <input type="text" name="four" id="four" maxlength="1">
                         <input type="text" name="five" id="five" maxlength="1">
                     </div>
-
-
+                    <br>
+                    <br>
                     <button type="submit" class="btn">SIGN IN</button>
-
+    
                 </form>
                 <h6 class="resend">Resend</h6>
             </div> -->
+
+
             <footer>
                 <div class="facebook">
                     <img src="/assest/OLIVE/Ellipse 2.png" />
@@ -151,11 +157,15 @@
                     <img class="socialicons" src="/assest/OLIVE/flat-color-icons_google.png" />
                 </div>
                 <div class="mail">
-                    <img src="/assest/OLIVE/Ellipse.png" />
+                    <img src="/assest/OLIVE/Ellipse 2.png" />
                     <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
                 </div>
+
             </footer>
+
+
         </section>
+
 
         <div class="bottom"></div>
     </div>
@@ -187,26 +197,45 @@
         });
     </script>
     <script>
+        var input = document.querySelector("#phone");
+        window.intlTelInput(input, {
+            initialCountry: "NG",
+            autoHideDialCode: false,
+            utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js",
+        });
+
+        input.addEventListener("open:countrydropdown", function (e) {
+            e.target.setAttribute("placeholder", "Select Country");
+            e.target.style.width = "40px !important";
+        });
 
         const form = document.querySelector("#form");
+        const btn = document.querySelector(".btn");
 
         form.addEventListener("submit", (e) => {
             e.preventDefault()
+            btn.disabled = true;
+            btn.innerHTML = "Please wait...";
 
 
             fetch('login', {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    username: e.target.username.value,
+                    username: input.value,
                     password: e.target.password.value
                 })
             }).then(res => res.json())
                 .then(data => {
                     if (data.status === "true") {
+                        btn.innerHTML = "SUCESS";
                         window.location.href = "/dashboard";
+                    } else {
+                        btn.disabled = false;
+                        btn.innerHTML = "SIGN IN";
+                        alert("Wrong username or password")
+
                     }
-                    console.log(data)
 
                 })
 
