--- a/views/provider/dashboard.ejs
+++ b/views/provider/dashboard.ejs
@@ -155,22 +155,23 @@
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div class="info-box bg-pink hover-expand-effect">
                         <div class="icon">
-                            <i class="material-icons">playlist_add_check</i>
+                            <i class="material-icons">payment</i>
                         </div>
                         <div class="content">
-                            <div class="text">NEW TASKS</div>
-                            <div class="number count-to" data-from="0" data-to="125" data-speed="15"
+                            <div class="text">TOTAL REVENUE</div>
+                            <div class="number count-to" data-from="0" data-to="<%=totalEarnings%>" data-speed="15"
                                 data-fresh-interval="20"></div>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div class="info-box bg-cyan hover-expand-effect">
                         <div class="icon">
-                            <i class="material-icons">help</i>
+                            <i class="material-icons">booking</i>
                         </div>
                         <div class="content">
-                            <div class="text">NEW TICKETS</div>
+                            <div class="text">TODAY REVENUE</div>
                             <div class="number count-to" data-from="0" data-to="257" data-speed="1000"
                                 data-fresh-interval="20"></div>
                         </div>
@@ -179,11 +180,11 @@
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div class="info-box bg-light-green hover-expand-effect">
                         <div class="icon">
-                            <i class="material-icons">forum</i>
+                            <i class="material-icons">mic</i>
                         </div>
                         <div class="content">
-                            <div class="text">NEW COMMENTS</div>
-                            <div class="number count-to" data-from="0" data-to="243" data-speed="1000"
+                            <div class="text">TOTAL AUDITION</div>
+                            <div class="number count-to" data-from="0" data-to="<%=totalAuditions%> " data-speed="1000"
                                 data-fresh-interval="20"></div>
                         </div>
                     </div>
@@ -194,8 +195,8 @@
                             <i class="material-icons">person_add</i>
                         </div>
                         <div class="content">
-                            <div class="text">NEW VISITORS</div>
-                            <div class="number count-to" data-from="0" data-to="1225" data-speed="1000"
+                            <div class="text">TOTAL USERS</div>
+                            <div class="number count-to" data-from="0" data-to="<%=totalUsers%>" data-speed="1000"
                                 data-fresh-interval="20"></div>
                         </div>
                     </div>
@@ -345,7 +346,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                     <div class="card">
                         <div class="header">
-                            <h2>TASK INFOS</h2>
+                            <h2>RECENT PAID AUDITIONS</h2>
                             <ul class="header-dropdown m-r--5">
                                 <li class="dropdown">
                                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown"
@@ -362,84 +363,95 @@
                         </div>
                         <div class="body">
                             <div class="table-responsive">
+
                                 <table class="table table-hover dashboard-task-infos">
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>Task</th>
-                                            <th>Status</th>
-                                            <th>Manager</th>
-                                            <th>Progress</th>
+                                            <th>Name</th>
+                                            <th>Price</th>
+                                            <th>Provider</th>
+                                            <th>Logo</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Task A</td>
-                                            <td><span class="label bg-green">Doing</span></td>
-                                            <td>John Doe</td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-green" role="progressbar"
-                                                        aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"
-                                                        style="width: 62%"></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Task B</td>
-                                            <td><span class="label bg-blue">To Do</span></td>
-                                            <td>John Doe</td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-blue" role="progressbar"
-                                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                                        style="width: 40%"></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Task C</td>
-                                            <td><span class="label bg-light-blue">On Hold</span></td>
-                                            <td>John Doe</td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-light-blue" role="progressbar"
-                                                        aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"
-                                                        style="width: 72%"></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Task D</td>
-                                            <td><span class="label bg-orange">Wait Approvel</span></td>
-                                            <td>John Doe</td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-orange" role="progressbar"
-                                                        aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
-                                                        style="width: 95%"></div>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Task E</td>
-                                            <td>
-                                                <span class="label bg-red">Suspended</span>
-                                            </td>
-                                            <td>John Doe</td>
-                                            <td>
-                                                <div class="progress">
-                                                    <div class="progress-bar bg-red" role="progressbar"
-                                                        aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"
-                                                        style="width: 87%"></div>
-                                                </div>
-                                            </td>
-                                        </tr>
+                                        <% topAuditions.forEach((a,i)=> { %>
+                                            <tr>
+                                                <td>
+                                                    <%=++i%>
+                                                </td>
+                                                <td>
+                                                    <%=a.auditionName%>
+                                                </td>
+                                                <td><span class="label bg-green">
+                                                        <%= a.auditionPrice %>
+                                                    </span></td>
+                                                <td>
+                                                    <%=provider.username%>
+                                                </td>
+                                                <td>
+                                                    <div class="">
+
+                                                        <img style="border-radius: 50%; height: 45px; width: 45px;"
+                                                            src="<%= a.auditionLogo %> " alt="" srcset="">
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td>2</td>
+                                                <td>Task B</td>
+                                                <td><span class="label bg-blue">To Do</span></td>
+                                                <td>John Doe</td>
+                                                <td>
+                                                    <div class="progress">
+                                                        <div class="progress-bar bg-blue" role="progressbar"
+                                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                                                            style="width: 40%"></div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Task C</td>
+                                                <td><span class="label bg-light-blue">On Hold</span></td>
+                                                <td>John Doe</td>
+                                                <td>
+                                                    <div class="progress">
+                                                        <div class="progress-bar bg-light-blue" role="progressbar"
+                                                            aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"
+                                                            style="width: 72%"></div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Task D</td>
+                                                <td><span class="label bg-orange">Wait Approvel</span></td>
+                                                <td>John Doe</td>
+                                                <td>
+                                                    <div class="progress">
+                                                        <div class="progress-bar bg-orange" role="progressbar"
+                                                            aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
+                                                            style="width: 95%"></div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>5</td>
+                                                <td>Task E</td>
+                                                <td>
+                                                    <span class="label bg-red">Suspended</span>
+                                                </td>
+                                                <td>John Doe</td>
+                                                <td>
+                                                    <div class="progress">
+                                                        <div class="progress-bar bg-red" role="progressbar"
+                                                            aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"
+                                                            style="width: 87%"></div>
+                                                    </div>
+                                                </td>
+                                            </tr> -->
+                                            <% }) %>
                                     </tbody>
                                 </table>
                             </div>
@@ -475,5 +487,12 @@
             </div>
         </div>
     </section>
+
+    <script>
+        const totalEarnings = "<%=totalEarnings%>";
+
+
+
+    </script>
 
     <%- include("./partials/footer.ejs") %>
