--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,8 @@
 
         <div class="img-round"
             style="display: flex;justify-content: center; align-items: center;height: 416px;flex-direction: column; position: relative;">
-            <img id="userImg" width="267px" height="267px" src="" alt="upload an image" style="border-radius: 50%;">
+            <img id="userImg" width="267px" height="267px" src="/assest/OLIVE/woman.png" alt="upload an image"
+                style="border-radius: 50%;">
             <!-- <label id="lableid" for="logoupload" hidden>
                 <img id=""
                     src="https://img.icons8.com/ios/50/000000/upload-to-cloud--v1.png" width="30px" height="30px" />
