already a user login

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -102,18 +102,17 @@
                 <br>
                 <button type="submit" class="btn">SIGN IN</button>
 
-            </form>
-            <h6 class="resend">Resend</h6>
-            <br>
-            <h6 class="resend">
-                <a href="/login" style="color: #801315;">Already a Member? Login </a>
-                <br>
-                <br>
 
-                <p style="color: #801315;">or <span>LOG IN</span> with </p>
-            </h6>
+
+            </form>
+
+
+
         </div>
 
+        <h6 class="resend">
+            <a href="/login" style="color: #801315;">Already a Member Login</a>
+        </h6>
 
         <footer>
             <div class="facebook">
