--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -231,6 +231,7 @@
                         otp_content.style.display = "flex";
                         formed.style.display = "none"
                     } else {
+                        submitBtn.innerHTML = "REGISTER";
                         alert(data.error)
                     }
 
