--- a/views/audition.ejs
+++ b/views/audition.ejs
@@ -77,7 +77,8 @@
                                     <% } %>
                                         <% if (audition.auditionPattern===1 ) { %>
                                             <div id="recordBtn">
-                                                <a target="restream" class="saveuser">
+                                                <a href="https://studio.restream.io/guest/bDBaNllXa7srZaCHW01LjKxavz4ynEU"
+                                                    target="_blank" class="saveuser">
                                                     <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
                                                     <h6>Record a video</h6>
                                                 </a>
